############≈‰÷√OPENCV#########################################################
C11_Config()
#ConfigOpenCv()
CONFIGQT()
###############################################################################
SET(DIR_SRCS   
				SerialPortBase.cpp)
###############################################################################
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")  

ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")

	ConfigMFC_2()
	CONFIGPTHREADS()

ENDIF () 
###############################################################################
SET(DIR_SRCS  
				${DIR_SRCS})
	
###############################################################################

ADD_LIBRARY(SerialPortBase   STATIC    ${DIR_SRCS}  )

###############################################################################
TARGET_LINK_LIBRARIES(SerialPortBase
									pthreads)
###############################################################################